add firebase analytics
add firebase analytics

--- a/playit2019/public/index.html
+++ b/playit2019/public/index.html
@@ -47,4 +47,28 @@
   <script src="js/jqBootstrapValidation.js"></script>
   <script src="js/contact_me.js"></script>
 
+  <!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/7.2.1/firebase-app.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+<script src="https://www.gstatic.com/firebasejs/7.2.1/firebase-analytics.js"></script>
+
+<script>
+  // Your web app's Firebase configuration
+  var firebaseConfig = {
+    apiKey: "AIzaSyDEItCxpmMPtfuZi1aPSeglrhQLjKN4qfY",
+    authDomain: "playit2019-ce6fc.firebaseapp.com",
+    databaseURL: "https://playit2019-ce6fc.firebaseio.com",
+    projectId: "playit2019-ce6fc",
+    storageBucket: "playit2019-ce6fc.appspot.com",
+    messagingSenderId: "138263669242",
+    appId: "1:138263669242:web:0da5e2b2b4ea42b119dc43",
+    measurementId: "G-4XHNFRYRKV"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+  firebase.analytics();
+</script>
+
 </html>
